--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 1999-06-20  Martin Junius  <mj@fido.de>
 
+	======= Release 4.3.4 ================================================
+	------- CVS tag R434 -------------------------------------------------
+	------- CVS ci -------------------------------------------------------
+
+	* test/tc.*: checked and updated run.verify for all cases.
+
 	------- CVS ci -------------------------------------------------------
 
 	* ANNOUNCE (WARNING): updated.
