--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 1999-06-20  Martin Junius  <mj@fido.de>
 
 	======= Release 4.3.4 ================================================
-
+	------- CVS tag R434a ------------------------------------------------
 	------- CVS ci -------------------------------------------------------
 
 	* src/include/prototypes.h: #undef strtok(), strtok_r, may be
